--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -52,6 +52,13 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="~/Message/Message" class="nav-link">
+                                <i style='font-size: 24px; padding: 8px; color: rgba(0, 0, 0, .55);' class='far'>&#xf075;</i>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
                         <!-- Profile picture in dropdown for all screens -->
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
