--- a/Tabang-Hub/Tabang-Hub/Views/Page/Index.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Index.cshtml
@@ -47,9 +47,9 @@
                                 <div class="logo">
                                     <img src="https://imgur.com/H8Yg6Sk.png">
                                     <p>Registration Process</p>
-                                    <h3>Your Decision Awaits</h3>
-                                    <span><img src="../duck1.png" alt=""></span>
-                                    <h4>User details</h4>
+                                    <h3>Personal Information</h3>
+                                    @*<span><img src="../duck1.png" alt=""></span>*@
+                                    @*<h4>User details</h4>*@
                                 </div>
                                 <div class="input_text">
                                     <input id="fname" type="text" placeholder="Firstname" required>
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="button">
                                     <button class="next" style="background-color: #fb4552; color: white;" onmouseover="this.style.backgroundColor='#fb4552'" onmouseout="this.style.backgroundColor='#fb4552'">Next</button>
-                                    <i class="fa fa-angle-right"></i>
+                                    @*<i class="fa fa-angle-right"></i>*@
                                 </div>
                             </div>
                         </div>
@@ -104,8 +104,8 @@
                                 <div class="logo">
                                     <img src="https://imgur.com/H8Yg6Sk.png">
                                     <p>Registration Process</p>
-                                    <h3>Your Decision Awaits</h3>
-                                    <span><img src="https://imgur.com/LcjrXas.jpg"></span>
+                                    <h3>Select Your Skills</h3>
+                                    @*<span><img src="https://imgur.com/LcjrXas.jpg"></span>*@
                                     <h4>Choose at least 1 or more skills</h4>
                                 </div>
                                 <div class="skills-container">
