--- a/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
@@ -14,8 +14,8 @@
                             <img src="~/Content/images/tabanghub3.png" alt="Tabang Hub Logo" class="img-fluid mb-3" style="max-width: 200px;">
                         </div>
                         <div class="col-md-8">
-                            <h2>Create a New Account</h2>
-                            <p>Fill in the details to create your account.</p>
+                            <h2>Register Organization</h2>
+                            <p>Fill in the details to create organization.</p>
                             <form action="#" method="post" enctype="multipart/form-data">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email Address</label>
@@ -39,12 +39,12 @@
                                     </div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="imageUpload1" class="form-label">Upload Profile Image 1</label>
+                                    <label for="imageUpload1" class="form-label">Valid ID 1</label>
                                     <input class="form-control" type="file" id="imageUpload1" name="picture1" accept="image/*" onchange="previewImage(event, 'imagePreview1')">
                                     <img id="imagePreview1" class="img-fluid mt-3" src="#" alt="Image Preview 1" style="display:none; max-width: 200px;">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="imageUpload2" class="form-label">Upload Profile Image 2</label>
+                                    <label for="imageUpload2" class="form-label">Valid ID 2</label>
                                     <input class="form-control" type="file" id="imageUpload2" name="picture2" accept="image/*" onchange="previewImage(event, 'imagePreview2')">
                                     <img id="imagePreview2" class="img-fluid mt-3" src="#" alt="Image Preview 2" style="display:none; max-width: 200px;">
                                 </div>
