--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "EventDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -78,7 +80,8 @@
         justify-content: center;
         color: black; /* Adjust color as needed */
     }
-    #counter{
+
+    #counter {
         margin-top: 10px;
     }
 
@@ -114,26 +117,26 @@
         <hr />
         <div class="row">
             @*<div class="col-md-8">
-            <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
-                <div class="carousel-inner">
-                    @for (int i = 0; i < Model.detailsEventImage.Count; i++)
-                    {
-                        var pic = Model.detailsEventImage[i];
-                        <div class="carousel-item @(i == 0 ? "active" : "")">
-                            <img src="~/Content/IdPicture/@pic.eventImage" class="d-block w-100" alt="Event Image">
+                    <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
+                        <div class="carousel-inner">
+                            @for (int i = 0; i < Model.detailsEventImage.Count; i++)
+                            {
+                                var pic = Model.detailsEventImage[i];
+                                <div class="carousel-item @(i == 0 ? "active" : "")">
+                                    <img src="~/Content/IdPicture/@pic.eventImage" class="d-block w-100" alt="Event Image">
+                                </div>
+                            }
                         </div>
-                    }
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>*@
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>*@
             <div class="col-md-8">
                 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
@@ -225,7 +228,7 @@
                         <p>
                             @info.orgDescription
                         </p>
-                    
+
                     </div>
                     <div class="col-md-3">
                         <h3>Contact us</h3>
@@ -285,23 +288,45 @@
 <script>
     function applyEvent(eventId) {
         $.ajax({
-            url: '@Url.Action("ApplyVolunteer", "Volunteer")',
-            type: 'POST',
-            data: {
-                eventId: eventId
-            },
-            success: function (response) {
-                if (response.success) {
-                    console.log("Apply Success");
+        url: '@Url.Action("ApplyVolunteer", "Volunteer")',
+        type: 'POST',
+        data: {
+            eventId: eventId
+        },
+        success: function (response) {
+            if (response.success) {
+                Swal.fire({
+                    title: 'Success!',
+                    text: response.message,
+                    icon: 'success',
+                    confirmButtonText: 'OK'
+                }).then(() => {
                     location.reload();
-                } else {
-                    console.log("Already apply.");
+                });
+            } else {
+                let title;
+                if (response.message == "No match Skill.") {
+                    title = "Skill Mismatch!"
+                } else if (response.message == "Already apply."){
+                    title = "Duplicate Application!"
                 }
-            },
-            error: function (xhr, status, error) {
-                console.log("Unsuccess.");
+                Swal.fire({
+                    title: title,
+                    text: response.message,
+                    icon: 'info',
+                    confirmButtonText: 'OK'
+                });
             }
-        })
+        },
+        error: function (xhr, status, error) {
+            Swal.fire({
+                title: 'Error!',
+                text: 'There was an issue with your application. Please try again later.',
+                icon: 'error',
+                confirmButtonText: 'OK'
+            });
+        }
+    })
     }
 
 
