Leave and Cancel
Can now Leave
Can now Cancel Application

--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                                 <li><a class="dropdown-item" href="~/Volunteer/VolunteerProfile">Profile</a></li>
-                                <li><a class="dropdown-item" href="~/Page/Settings">Settings</a></li>
+                                <li><a class="dropdown-item" href="~/Volunteer/Participate">Participate</a></li>
                                 <li><a class="dropdown-item" href="~/Page/Logout">Logout</a></li>
                             </ul>
                         </li>
